# VOWL-R

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  build_mimalloc.sh  docker-compose.yml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: clippy.yml  format.yml  tests.yml
benches/: serializer.rs
crates/database/: Cargo.toml  README.md
crates/database/data/owl-rdf/: foaf.owl  foaf_simple.owl
crates/database/src/: cleanup.rs  errors.rs  lib.rs  main.rs  serializers.rs  store.rs  vocab.rs
crates/database/src/serializers/: frontend.rs  index.rs  util.rs
crates/database/src/vocab/: dcmi.rs  owl.rs  rdf.rs  rdfs.rs  xsd.rs
crates/database/tests/: serializers.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: errors.rs  parser_util.rs
crates/perfdebugger/: Cargo.toml  README.md
crates/perfdebugger/src/: lib.rs  main.rs
crates/serializer/: Cargo.toml  README.md
crates/serializer/src/: datastructures.rs  errors.rs  lib.rs  serializer_util.rs  write_triple.rs
crates/serializer/src/datastructures/: edge_data.rs  graph_metadata_buffer.rs  index.rs  restriction_data.rs  serialization_data_buffer.rs  triple.rs
crates/serializer/src/serializer_util/: buffers.rs  edges.rs  entity_creation.rs  labels.rs  nodes.rs  synthetic.rs
crates/serializer/src/serializer_util/edges/: characteristics.rs
crates/serializer/src/serializers/: frontend.rs
crates/serializer/src/write_triple/: owl_triple.rs
crates/sparql_queries/: Cargo.toml
crates/sparql_queries/src/: assembly.rs  element_type_injection.rs  lib.rs  main.rs  property_injection.rs  snippets.rs
crates/sparql_queries/src/reference/: default.rq
crates/sparql_queries/src/snippets/: characteristic.rs  element_type.rs  general.rs  generic.rs  owl.rs  rdf.rs  rdfs.rs  xsd.rs
crates/util/: Cargo.toml  README.md
crates/util/src/: datatypes.rs  env.rs  error_handler.rs  lib.rs  time.rs
src/: app.rs  env.rs  error.rs  errors.rs  hydration_scripts.rs  lib.rs  main.rs  process_env.rs
src/assets/: about_description.txt
src/blocks/: right_side_bar.rs  workbench.rs
src/blocks/workbench/: about_menu.rs  error_log.rs  export_menu.rs  filter_menu.rs  ontology_menu.rs  options_menu.rs  query_menu.rs  search_menu.rs
src/blocks/workbench/filter_menu/: classes.rs  element_legend_injection.rs  filtergroup.rs  filtertype.rs  meta_filter.rs  properties.rs  special_operators.rs
src/blocks/workbench/ontology_menu/: stored_ontology.rs
src/components/: icon.rs  lists.rs  progress_bar.rs  table.rs  tooltip.rs  user_input.rs
src/components/buttons/: graph_interaction_buttons.rs
src/components/menu/: mega_menu.rs  vertical_menu.rs
src/components/user_input/: file_upload.rs  internal_sparql.rs  range_select.rs  stored_ontology.rs
src/pages/: home.rs
