[package]
    authors=["khmikkelsen"]
    description="Parsers for various OWL and RDF formats supported by LOVET"
    edition="2024"
    keywords=["parser", "owl", "rdf"]
    license-file="LICENSE"
    name="lovet-parser"
    readme="README.md"
    repository="https://github.com/WebVOWL/LOVET"
    version="0.1.0"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    futures.workspace=true
    horned-owl.workspace=true
    leptos.workspace=true
    log.workspace=true
    lovet-util={path="../util"}
    rdf-fusion.workspace=true
    serde="1.0"
    strum.workspace=true
    tokio.workspace=true
    tokio-stream="0.1.17"

[dev-dependencies]
    env_logger.workspace=true
