[package]
    authors.workspace=true
    description="Shared SPARQL query strings for VOWLGrapher (WASM-safe)."
    edition.workspace=true
    keywords.workspace=true
    license-file.workspace=true
    name="vowlgrapher-sparql-queries"
    readme="README.md"
    repository.workspace=true
    version.workspace=true

[lib]
    path="src/lib.rs"

[lints]
    workspace=true

[dependencies]
    grapher={workspace=true}
    vowlgrapher-util={path="../util"}
    regex = "1.12.3"
    once_cell = "1.21.4"
