[package]
    authors=["TheRealMorgenfrue", "LouiseWolff17"]
    description="Utility code used by the entire LOVET workspace"
    edition="2024"
    license-file="LICENSE"
    name="lovet-util"
    readme="README.md"
    repository="https://github.com/WebVOWL/LOVET"
    version="0.1.0"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    leptos.workspace=true
    log.workspace=true
    rkyv.workspace=true
    serde={version="1.0", features=["derive"]}
    strum.workspace=true
    tabled={version="0.20", optional=true}

[features]
    server=["dep:tabled"]
