[package]
    authors=["TheRealMorgenfrue", "LouiseWolff17"]
    description="Utility code used by the entire VOWL-R workspace"
    edition="2024"
    license-file="LICENSE"
    name="vowlr-util"
    readme="README.md"
    repository="https://github.com/WebVOWL/VOWL-R"
    version="0.1.0"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    leptos.workspace=true
    log.workspace=true
    rkyv.workspace=true
    serde.workspace=true
    strum.workspace=true
    tabled={version="0.20", optional=true}
    time={version="0.3.47", features=["formatting", "macros"]}

[features]
    server=["dep:tabled"]
